Add syphilis history field to bulk uploader (#7809)
* Add syphilis history field to bulk uploader

* Use string literals

* Refactor using list of fields